--- a/src/main/webapp/DocumentCreator.xhtml
+++ b/src/main/webapp/DocumentCreator.xhtml
@@ -11,20 +11,20 @@
 </p:head>
 <p:body>
 <p:form>
-<!-- 		<p:panelGrid border="1" columns="1"> -->
+		<p:panelGrid border="1" columns="1">
 
-<!-- 		<div style="width:100%;"> -->
-<!-- 		<p:panelGrid border="1" columns="3"> -->
+ 		<div style="width:100%;">
+		<p:panelGrid border="1" columns="3">
 
-<!-- 			<div> -->
-<!-- 				<p:panelGrid columns="1"> -->
+			<div>
+				<p:panelGrid columns="1">
 					<p:inputText value="#{documentCreatorBB.compMaker.fieldName}"></p:inputText>
 					<p:commandButton  value="new" action="#{documentCreatorBB.reset()}"></p:commandButton>
 					<p:commandButton value="add" action="#{documentCreatorBB.addField()}" disabled="#{documentCreatorBB.botonAddDisabled()}"></p:commandButton>
 					<p:commandButton value="remove" action="#{documentCreatorBB.removeField()}" disabled="#{documentCreatorBB.botonRemoveDisabled()}"></p:commandButton>
 		
-<!-- 				</p:panelGrid> -->
-<!-- 			</div> -->
+				</p:panelGrid>
+			</div>
 
 			<ui:selectOneMenu  value="#{documentCreatorBB.compMaker.fieldType}">
 				<c:selectItems value="#{documentCreatorBB.compMaker.fieldTypesList}" ></c:selectItems>
@@ -32,17 +32,17 @@
 					listener="#{documentCreatorBB.listenerTypes()}" />
 			</ui:selectOneMenu>
 
-<!--  -->			<p:selectOneListbox  value="#{documentCreatorBB.makerNameSelected}"> 
+			<p:selectOneListbox  value="#{documentCreatorBB.makerNameSelected}"> 
 				<c:selectItems value="#{documentCreatorBB.makersNamesList}" ></c:selectItems>
 			</p:selectOneListbox>
 
-<!-- 		</p:panelGrid> -->
-<!-- 		</div> -->
-<!-- 		<div style="width:100%; height:80%;"> -->
+		</p:panelGrid>
+		</div>
+		<div style="width:100%; height:80%;">
 			<p:inputTextarea value="#{documentCreatorBB.compMaker.document}"></p:inputTextarea>
-<!-- 			</div> -->
+			</div>
 
-<!-- 		</p:panelGrid> -->
+		</p:panelGrid>
 
 </p:form>
 
